@@ -18,6 +18,8 @@ version 1.1.0
 - Activate a few missing translated strings
 - Fix "sim" command so it can be used to modify just one 
   observation in a given series
+- Fix bugs associated with starting a dataset by importing from
+  a database
 - Allow access to RATS databases via command line and scripts
 - Clean-up: remove all wasted array elements
 - Update to libtool 1.5
